# Calendar

./: .gitmodules  CMakeLists.txt  err_handle.c  err_handle.h  event.c  event.h  main.c  struct.h
.github/workflows/: cmake-multi-platform.yml
ef2crj34Rp/: CMakeLists.txt  LICENSE  MODIFICATIONS.md  README.md  build.sh  check_compile.sh  examples.sh  final_check.sh  test_calendar.sh
ef2crj34Rp/include/: err_handle.h  write_event.h
ef2crj34Rp/src/: err_handle.c  main.c  write_event.c
ef2crj34Rp/test/: compile_test.c  syntax_check.c
include/: err_handle.h  event.h  struct.h
src/: err_handle.c  event.c  main.c
